--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,4 @@ authors = ["Nate Catelli <ncatelli@packetfire.org>"]
 edition = "2018"
 
 [dependencies]
+scrap = { git = "https://github.com/ncatelli/scrap", tag = "v0.1.1" }
