Update CI/CD with toolchain-rs utilities for running linting and tests (#316)
* Add rs toolchain methods for clippy, test and bloat

* Remove bloat... this is a library

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,12 +6,16 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: Lint source
-      run: cargo clippy
+      - uses: actions/checkout@v1
+      - run: rustup component add clippy
+      - uses: actions-rs/clippy-check@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
   unit_test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
     - name: Run tests
-      run: cargo test
+      uses: actions-rs/cargo@v1
+      with:
+        command: test
