--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,5 +16,5 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Run tests 
-    - uses: dtolnay/rust-toolchain@stable
+      uses: dtolnay/rust-toolchain@stable
       run: cargo test
